			CHANGELOG for KAME kit

$KAME: CHANGELOG,v 1.1637 2001/04/04 13:54:45 sakane Exp $

<200104>
Wed Apr  4 22:47:27 JST 2001 sakane@ydc.co.jp
	* racoon:
	support scopeid.  base code was from <Francis.Dupont@enst-bretagne.fr>.
	it should be considered more.

Wed Apr  4 19:49:39 JST 2001  itojun@iijlab.net
	* sys/netinet6/icmp6.c: make sure we do not pass mbuf with 
	  bogus m->m_pkthdr.rcvif, to icmp6_reflect(), on icmp6 error
	  generation.

Wed Apr  4 13:17:00 JST 2001	suz@sdl.hitachi.co.jp
	* kame/v6test/getconfig.c
	fixed a bug that you cannot specify an optional value if its 
	MSB is on.

2001-04-03  Jason R. Thorpe  <thorpej@zembu.com>

	* racoon: Better integration of debugging malloc libraries.
	Use wrapper macros (racoon_{malloc,calloc,free,realloc}())
	so that debugging malloc implementations can get file/line
	info, and also put traditional malloc/calloc/free/realloc
	stubs in the main program so that libraries linked with
	racoon get the debugging allocators, as well.

Mon Apr  3 JST 2001  itojun@iijlab.net
	* sys/netinet6/tcp6_output.c (freebsd2/bsdi3),
	  sys/netinet/tcp_output.c (netbsd/openbsd/bsdi4):
	  support IPV6_USE_MIN_MTU setsockopt on IPv6 tcp.
	  - pass IPV6_MINMTU down to ip6_output,
	  - on outgoing segment packing use 1280 (IPV6_MMTU) as packet size,
	    instead of MSS heard from the peer (except bsdi4/openbsd).

	  design memo:
	  do we need to play with MSS advertisement to the peer?  I don't
	  think so, since:
	  - IPV6_MIN_MTU controls outbound traffic only
	  - outgoing MSS advertisement will control the inbound segment size.
	  though i agree that it is be useful to decrase MSS advertisement
	  to trick inbound PMTUD behavior, i believe it is a separate topic
	  from IPV6_MIN_MTU.

	  TODO: generate packets fit into 1280 bytes for bsdi4/openbsd

2001-04-02  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* bsdi3/sys/net/if.c (ifa_ifwithnet): disabled the check for
	IFF_POINTOPOINT|IFF_LOOPBACK in ifa_ifwithnet().  The check for